<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Kodesh</string>
    <string name="kod_filter_title">Filter</string>
    <string name="kod_search_title">Search</string>
    <string name="kod_button_go">Go</string>
    <string name="kod_button_cancel">Cancel</string>
    <string name="kod_hint_search_book">Book</string>
    <string name="hint_search">Search</string>
    <string name="navigate_header_book">Book</string>
    <string name="navigate_header_chapter">Chapter</string>
    <string name="navigate_header_verse">Verse</string>
    <string name="navigate_dialog_title">Go to</string>
    <string name="search_verses">Search verses</string>
    <string name="find_in_page_title">Find in page</string>
    <string name="font_and_theme_title">Font and theme</string>
    <string name="styling_title">Styling</string>
    <string name="kjv_styling_title">KJV styling</string>
    <string name="drop_cap_title">Drop cap</string>
    <string name="red_letter_title">Red letter</string>
    <string name="verse_numbers_title">Verse numbers</string>
    <string name="separate_verses_title">Separate verses</string>
    <string name="paragraph_breaks_title">Paragraph breaks</string>
    <string name="about_banner_icon_description">Kodesh icon</string>
    <string name="about_banner_text">An app for reading the scriptures.\n\nWisdom is the principal thing; therefore get wisdom: and with all thy getting get understanding.\n— Proverbs 4:7</string>
    <string name="read_title">Read</string>
    <string name="preface_title">Preface</string>
    <string name="settings_title">Settings</string>
    <string name="about_title">About</string>
    <string name="dedicatory_text">
        <![CDATA[
         <h4>TO THE MOST HIGH AND MIGHTY PRINCE<br></br>
<big>JAMES</big><br></br>
<i>BY THE GRACE OF GOD</i></h4>
<h2>KING OF GREAT BRITAIN, FRANCE AND IRELAND,<br></br>
DEFENDER OF THE FAITH &c.</h2>
<p><h2>The translators of the Bible wish Grace, Mercy, and Peace, 
through <i>JESUS CHRIST</i> our Lord.</h2><br></br>
     GREAT and manifold were the blessings, most dread Sovereign, which Almighty God, the Father of all mercies, bestowed upon us the people of England, when first he sent Your Majesty\'s Royal Person to rule and reign over us. For whereas it was the expectation of many, who wished not well unto our Sion, that upon the setting of that bright Occidental Star, Queen Elizabeth of most happy memory, some thick and palpable clouds of darkness would so have overshadowed this Land, that men should have been in doubt which way they were to walk; and that it should hardly be known, who was to direct the unsettled State; the appearance of Your Majesty, as of the Sun in his strength, instantly dispelled those supposed and surmised mists, and gave unto all that were well affected exceeding cause of comfort; especially when we beheld the Government established in Your Highness, and Your hopeful Seed, by an undoubted Title, and this also accompanied with peace and tranquillity at home and abroad.</p>

     <p>But among all our joys, there was no one that more filled our hearts, than the blessed continuance of the preaching of God\'s sacred Word among us; which is that inestimable treasure, which excelleth all the riches of the earth; because the fruit thereof extendeth itself, not only to the time spent in this transitory world, but directeth and disposeth men unto that eternal happiness which is above in heaven.</p>

     <p>Then not to suffer this to fall to the ground, but rather to take it up, and to continue it in that state, wherein the famous Predecessor of Your Highness did leave it: nay, to go forward with the confidence and resolution of a Man in maintaining the truth of Christ, and propagating it far and near, is that which hath so bound and firmly knit the hearts of all Your Majesty\'s loyal and religious people unto You, that Your very name is precious among them: their eye doth behold You with comfort, and they bless You in their hearts, as that sanctified Person, who, under God, is the immediate Author of their true happiness. And this their contentment doth not diminish or decay, but every day increaseth and taketh strength, when they observe, that the zeal of Your Majesty toward the house of God doth not slack or go backward, but is more and more kindled, manifesting itself abroad in the farthest parts of Christendom, by writing in defence of the Truth, (which hath given such a blow unto that Man of Sin, as will not be healed,) and every day at home, by religious and learned discourse, by frequenting the house of God, by hearing the Word preached, by cherishing the Teachers thereof, by caring for the Church, as a most tender and loving nursing Father.</p>

     <p>There are infinite arguments of this right Christian and religious affection in Your Majesty; but none is more forcible to declare it to others than the vehement and perpetuated desire of accomplishing and publishing of this work, which now with all humility we present unto Your Majesty. For when Your Highness had once out of deep judgment apprehended how convenient it was, that out of the Original Sacred Tongues, together with comparing of the labours, both in our own, and other foreign Languages, of many worthy men who went before us, there should be one more exact Translation of the holy Scriptures into the English Tongue; Your Majesty did never desist to urge and to excite those to whom it was commended, that the work might be hastened, and that the business might be expedited in so decent a manner, as a matter of such importance might justly require.</p>

     <p>And now at last, by the mercy of God, and the continuance of our labours, it being brought unto such a conclusion, as that we have great hopes that the Church of England shall reap good fruit thereby; we hold it our duty to offer it to Your Majesty, not only as to our King and Sovereign, but as to the principal Mover and Author of the work: humbly craving of Your most Sacred Majesty, that since things of this quality have ever been subject to the censures of ill-meaning and discontented persons, it may receive approbation and patronage from so learned and judicious a Prince as Your Highness is, whose allowance and acceptance of our labours shall more honour and encourage us, than all the calumniations and hard interpretations of other men shall dismay us. So that if, on the one side, we shall be traduced by Popish Persons at home or abroad, who therefore will malign us, because we are poor instruments to make God\'s holy Truth to be yet more and more known unto the people, whom they desire still to keep in ignorance and darkness; or if, on the other side, we shall be maligned by self-conceited Brethren, who run their own ways, and give liking unto nothing, but what is framed by themselves, and hammered on their anvil; we may rest secure, supported within by the truth and innocency of a good conscience, having walked the ways of simplicity and integrity, as before the Lord; and sustained without by the powerful protection of Your Majesty\'s grace and favour, which will ever give countenance to honest and Christian endeavours against bitter censures and uncharitable imputations.</p>

     <p>The Lord of heaven and earth bless Your Majesty with many and happy days, that, as his heavenly hand hath enriched Your Highness with many singular and extraordinary graces, so You may be the wonder of the world in this latter age for happiness and true felicity, to the honour of that great GOD, and the good of his Church, through Jesus Christ our Lord and only Saviour.</p>
        ]]>
    </string>
</resources>